# REFPROP-wrappers

./: .gitignore  .gitmodules  CMakeLists.txt  FindPythonLibsNew.cmake  README.md  REFPROP.cpp  REFPROP.h  REFPROP.i  test_main.cpp
.github/: ISSUE_TEMPLATE.md
wrappers/C#_High_Level_Wrapper/: README.md  Refprop_CSharp.sln
wrappers/C#_High_Level_Wrapper/RefpropDLL/: Refprop.cs  RefpropDLL.csproj  Refprop_DLL.cs
wrappers/C#_High_Level_Wrapper/RefpropDLL/Properties/: AssemblyInfo.cs
wrappers/C#_High_Level_Wrapper/Refprop_Example/: Form1.Designer.cs  Form1.cs  Program.cs  Refprop_Example.csproj
wrappers/C#_High_Level_Wrapper/Refprop_Example/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
wrappers/C_CPP/: CMakeLists.txt  README.md
wrappers/C_CPP/include/MyProject/: test_utils.h
wrappers/C_CPP/refprop/: CMakeLists.txt
wrappers/C_CPP/refprop/include/Refprop/: REFPROP_lib.h  enum.h  fluid_codes.h  refprop_v10.h  utils.h
wrappers/C_CPP/refprop/src/: refprop_v10.cpp  utils.cpp
wrappers/C_CPP/src/: main.cpp
wrappers/Csharp/: README.md  RefProp_cs_Examples.sln
wrappers/Csharp/IRefProp/: IRefProp.csproj  IRefProp64.cs
wrappers/Csharp/IRefProp/Properties/: AssemblyInfo.cs
wrappers/Csharp/RefProp_cs_Examples/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  RefProp_cs_Examples.csproj
wrappers/Csharp/RefProp_cs_Examples/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
wrappers/Csharp_High_API/: README.md  Refprop_CSharp.sln
wrappers/Csharp_High_API/RefpropDLL/: Refprop.cs  RefpropDLL.csproj  Refprop_DLL.cs
wrappers/Csharp_High_API/RefpropDLL/Properties/: AssemblyInfo.cs
wrappers/Csharp_High_API/Refprop_Example/: Program.cs  Refprop_Example.csproj  Refprop_Form.Designer.cs  Refprop_Form.cs
wrappers/Csharp_High_API/Refprop_Example/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
wrappers/Excel/: README.md  REFPROP.XLA  REFPROP.XLS  REFPRP91.XLA
wrappers/FORTRAN/: CMakeLists.txt  EXAMPLE.FOR  README.md
wrappers/FORTRAN/shared/: TEST.FOR
wrappers/LabWindows/: README.md  REFPROP_Interface.h  REFPROP_Interface.uir  REFPROP_Main.c  REFPROP_lib.h  Refprop tester.cws  Refprop tester.prj
wrappers/Labview/: README.md  REFPROP High Level API Tester.aliases  REFPROP High Level API Tester.lvlps  REFPROP High Level API Tester.lvproj  Refprop tester.vi
wrappers/Labview/REFPROP/Ctl/: FLSH_Inputs.ctl  FLSH_Outputs.ctl  Mixture Composition cluster_d.ctl  SAT_Inputs.ctl  SAT_Outputs.ctl  hrf_enum_d.ctl  variable_refprop.ctl
wrappers/Labview/REFPROP/Refprop_Example/: Refprop_Example_main.vi
wrappers/Labview/REFPROP/Tests/: ABFLSH_Test.vi  ALLPROP1_Test.vi  ALLPROPS0_Test.vi  ALLPROPS20_Test.vi  ALLPROPS_Test.vi  ERRMSGdll_Test.vi  FLAGSdll_Test.vi  GETENUMdll_Test.vi  REFPROP1dll_Test.vi  REFPROP2dll_Test.vi  REFPROPdll_Test.vi  SETFLUIDSdll_Test.vi  SETMIXTUREdll_Test.vi  SETPATHdll_Test.vi
wrappers/Labview/REFPROP/UTILITY SUBROUTINES/: REFPROP_ErrorConverter.vi  Transfer_FLSH_Format.vi  Transfer_SAT_Format.vi  Utility_Calculate.vi  Utility_Initialization.vi  Utility_Pad_String.vi  Utility_Parse_Refrigerant_Mixture_File.vi  Utility_Read_Fluid_Cluster.vi  Utility_Read_Fluid_XML.vi  Utility_Read_Mixture_Cluster.vi  Utility_Read_Mixture_XML.vi  Utility_Read_Refrigerant_File.vi  Utility_Read_and_Format_Refrigerant_and_Mixtures.vi  Utility_Setup.vi  Utility_Strip_and_Replace_File_Suffix.vi
wrappers/Labview/REFPROP/VIs/: ABFL1dll.vi  ABFL2dll.vi  ABFLSHdll.vi  AGdll.vi  ALLPROPS0dll.vi  ALLPROPS1dll.vi  ALLPROPS20dll.vi  ALLPROPSdll.vi  B12dll.vi  CHEMPOTdll.vi  CP0dll.vi  CRITPdll.vi  CSATKdll.vi  CSTARdll.vi  CV2PKdll.vi  CVCPdll.vi  DBDTdll.vi  DBFL1dll.vi  DDD Tdll.vi  DDDPdll.vi  DEFL1dll.vi  DEFLSHdll.vi  DHD1dll.vi  DHFL1dll.vi  DHFLSHdll.vi  DIELECdll.vi  DLSATKdll.vi  DPDD2dll.vi  DPDDdll.vi  DPDTdll.vi  (+106 more)
wrappers/MATLAB/: README.md  README.rst  REFPROP.h  refpropm.m
wrappers/MATLAB/legacy/: README.rst
wrappers/MATLAB/refmatpy/: Example_RefpropMatPy.m  refmatpy.m  setGlobalrefmatpy.m
wrappers/Mathcad/: .gitattributes  .gitignore  BuildLegacyMathcadDLL.md  CopyDocs15.bat  High-LevelAPI.md  LegacyAPI.md  README.md
wrappers/Mathcad/Handbook/: README.md  RefProp.hbk
wrappers/Mathcad/PrimeDocs/: README.md
wrappers/Mathcad/Units/: README.md  RefProp_units.mcdx  RefProp_units.xmcd
wrappers/Mathcad/build15/: MathcadREFPROPwrapper.sln  MathcadREFPROPwrapper.vcxproj  README.md
wrappers/Mathcad/buildPrime/: Prime Properties.props  README.md  RefpropPrimeWrapper.sln  RefpropPrimeWrapper.vcxproj  RefpropPrimeWrapper.vcxproj.filters
wrappers/Mathcad/includes/: RPMassUnits.h  RPstrings.h  rp_ERRMSG.h  rp_FLAGS.h  rp_GETENUM.h  rp_LIMITS.h  rp_REFPROP.h  rp_SETFLUIDS.h  rp_betafp.h  rp_betaft.h  rp_betagp.h  rp_betagt.h  rp_betatp.h  rp_cpfp.h  rp_cpft.h  rp_cpgp.h  rp_cpgt.h  rp_cptp.h  rp_cvfp.h  rp_cvft.h  rp_cvgp.h  rp_cvgt.h  rp_cvtp.h  rp_cvtrho.h  rp_extrapolate.h  rp_gammafp.h  rp_gammaft.h  rp_gammagp.h  rp_gammagt.h  rp_gammatp.h  rp_getNIST.h  rp_getRPnum.h  rp_getcasn.h  rp_getname.h  rp_getpath.h  rp_getvers.h  rp_getx.h  rp_hfp.h  rp_hft.h  rp_hgp.h  (+79 more)
wrappers/Mathcad/src/: RPstrings.cpp  Refprop.cpp
wrappers/Mathematica/: .gitignore  Installation.nb  PacletInfo.m  README.md  RefpropLinkInstructions.wls
wrappers/Mathematica/RefpropLink/: .gitignore  Filepaths.txt  ForDevelopers.nb  Installation.nb  PacletInfo.wl  RefpropLink.m  RefpropUnits.m
wrappers/python/: README.md  build_f2py_wrapper.py  crit_lines.py  ctypes_wrapper.py  test_OSX.py
wrappers/python/ctypes/: build_wrapper.py  multiprocessing_example.py  pyproject.toml  setup.py
wrappers/python/ctypes/ctREFPROP/: ctREFPROP.py
wrappers/python/ctypes/examples/: multiprocessing_example.py  pool_example.py  pool_example_AbstractState.py  test_PQFLSHdll.py  test_SETREF.py  test_manager.py
wrappers/python/f2py/: build_f2py_wrapper.py  conda_build_test.bat
wrappers/python/notebooks/: Tutorial.ipynb
wrappers/swig/: CMakeLists.txt  REFPROP.h  test_main.cpp
wrappers/swig/cmake/: FindR.cmake
(+118 files in other folders)
